--- a/src/main/resources/assets/astronomymod/lang/en_us.json
+++ b/src/main/resources/assets/astronomymod/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.astronomymod.blackhole": "Black Hole",
   "item.astronomymod.neutron_star": "Neutron Star",
   "item.astronomymod.pulsar": "Pulsar",
+  "item.astronomymod.astronomy_shard": "Astronomy Shard",
 
   "category.astronomymod.astronomy": "Astronomy Mod",
   "key.astronomymod.activate_ability": "Activate Astronomy Ability",
@@ -11,57 +12,14 @@
 
   "tooltip.astronomymod.astronomy_item": "Astronomy Item",
   "tooltip.astronomymod.place_in_slot": "Place in Astronomy Slot",
-
-  "tooltip.astronomymod.planet.passive_title": "Passive:",
-  "tooltip.astronomymod.planet.passive_1": "Increased health regeneration",
-  "tooltip.astronomymod.planet.passive_2": "Reduced fall damage",
-  "tooltip.astronomymod.planet.active_title": "Active:",
-  "tooltip.astronomymod.planet.active_1": "Temporary shield and speed boost",
-  "tooltip.astronomymod.planet.bonus_1": "Bonus health when equipped",
-  "tooltip.astronomymod.planet.bonus_2": "Environmental damage reduction",
-
-  "tooltip.astronomymod.supernova.passive_title": "Passive:",
-  "tooltip.astronomymod.supernova.passive_1": "Increased damage output",
-  "tooltip.astronomymod.supernova.passive_2": "Fire resistance",
-  "tooltip.astronomymod.supernova.passive_3": "Burning enemies on hit",
-  "tooltip.astronomymod.supernova.active_title": "Active:",
-  "tooltip.astronomymod.supernova.active_1": "Explosive area damage",
-  "tooltip.astronomymod.supernova.bonus_1": "Increased critical hit chance",
-  "tooltip.astronomymod.supernova.bonus_2": "Bonus damage in daylight",
-
-  "tooltip.astronomymod.blackhole.passive_title": "Passive:",
-  "tooltip.astronomymod.blackhole.passive_1": "Pull nearby items",
-  "tooltip.astronomymod.blackhole.passive_2": "Increased experience gain",
-  "tooltip.astronomymod.blackhole.passive_3": "Gravity manipulation",
-  "tooltip.astronomymod.blackhole.active_title": "Active:",
-  "tooltip.astronomymod.blackhole.active_1": "Pull nearby enemies",
-  "tooltip.astronomymod.blackhole.active_2": "Temporary time dilation",
-  "tooltip.astronomymod.blackhole.bonus_1": "Void damage immunity",
-  "tooltip.astronomymod.blackhole.bonus_2": "Reduced knockback taken",
-
-  "tooltip.astronomymod.neutron_star.passive_title": "Passive:",
-  "tooltip.astronomymod.neutron_star.passive_1": "Increased armor and toughness",
-  "tooltip.astronomymod.neutron_star.passive_2": "Knockback resistance",
-  "tooltip.astronomymod.neutron_star.passive_3": "Radiation damage to nearby enemies",
-  "tooltip.astronomymod.neutron_star.active_title": "Active:",
-  "tooltip.astronomymod.neutron_star.active_1": "Emit radiation pulse",
-  "tooltip.astronomymod.neutron_star.active_2": "Temporary invulnerability",
-  "tooltip.astronomymod.neutron_star.bonus_1": "Increased mining speed",
-  "tooltip.astronomymod.neutron_star.bonus_2": "Explosion resistance",
-
-  "tooltip.astronomymod.pulsar.passive_title": "Passive:",
-  "tooltip.astronomymod.pulsar.passive_1": "Increased movement speed",
-  "tooltip.astronomymod.pulsar.passive_2": "Attack speed boost",
-  "tooltip.astronomymod.pulsar.passive_3": "Emit periodic energy pulses",
-  "tooltip.astronomymod.pulsar.passive_4": "Reduced ability cooldowns",
-  "tooltip.astronomymod.pulsar.active_title": "Active:",
-  "tooltip.astronomymod.pulsar.active_1": "Dash forward at high speed",
-  "tooltip.astronomymod.pulsar.active_2": "Stun nearby enemies",
-  "tooltip.astronomymod.pulsar.bonus_1": "Night vision effect",
-  "tooltip.astronomymod.pulsar.bonus_2": "Increased jump height",
+  "tooltip.astronomymod.astronomy_shard": "Right-click while holding an Astronomy Item to upgrade it",
 
   "message.astronomymod.equipped": "Equipped astronomy item",
   "message.astronomymod.unequipped": "Unequipped astronomy item",
   "message.astronomymod.no_item_equipped": "No astronomy item equipped",
-  "message.astronomymod.given_all_items": "Given all astronomy items"
+  "message.astronomymod.given_all_items": "Given all astronomy items",
+  "message.astronomymod.fully_upgraded": "This item is already fully upgraded!",
+  "message.astronomymod.hold_astronomy_item": "Hold an Astronomy Item in your other hand!",
+  "message.astronomymod.upgraded": "Upgraded to %s shard(s)!",
+  "message.astronomymod.need_shards": "Need 3 shards to use active ability!"
 }
